Bug 48781 - Sony Vaio VPCEB1S1E requires acpi_sleep=nonvs
Summary: Sony Vaio VPCEB1S1E requires acpi_sleep=nonvs
Status: CLOSED CODE_FIX
Alias: None
Product: ACPI
Classification: Unclassified
Component: Power-Sleep-Wake (show other bugs)
Hardware: All Linux
: P1 normal
Assignee: Lan Tianyu
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-10-14 12:56 UTC by Sébastien Wilmet
Modified: 2013-02-19 05:22 UTC (History)
3 users (show)

See Also:
Kernel Version: 3.6.1
Subsystem:
Regression: No
Bisected commit-id:


Attachments
debug.patch (557 bytes, patch)
2012-10-31 13:59 UTC, Lan Tianyu
Details | Diff
debug.patch (887 bytes, patch)
2012-11-19 05:54 UTC, Lan Tianyu
Details | Diff
debug.patch (860 bytes, patch)
2013-01-30 07:12 UTC, Lan Tianyu
Details | Diff
debug.patch (1.23 KB, patch)
2013-01-30 07:14 UTC, Lan Tianyu
Details | Diff

Description Sébastien Wilmet 2012-10-14 12:56:10 UTC
Exactly the same issue as bug #34722, but for another Vaio laptop:

The acpi_sleep=nonvs kernel parameter is required for suspend/resume to work correctly on Sony Vaio VPCEB1S1E laptops.

Else, the computer seems to be well suspended, but it reboots instead of resuming.

From dmidecode, here's the relevant info:

System Information
	Manufacturer: Sony Corporation
	Product Name: VPCEB1S1E

Thanks in advance!
Comment 1 Lan Tianyu 2012-10-31 13:59:31 UTC
Created attachment 85351 [details]
debug.patch

Please try this patch.
Comment 2 Sébastien Wilmet 2012-11-03 01:48:44 UTC
The patch works fine, thanks!

(Sorry for the little delay, it is not my computer.)
Comment 3 Lan Tianyu 2012-11-09 00:59:25 UTC
https://patchwork.kernel.org/patch/1713511/
Comment 4 Lan Tianyu 2012-11-19 05:54:06 UTC
Created attachment 86611 [details]
debug.patch

Hi Sébastien:
     Could you test this new patch on linux-pm next tree?

     git pull git://git.kernel.org/pub/scm/linux/kernel/git/rafael/linux-pm.git linux-next.


     There is a new feature of no_nvs_s3 in the pm next tree. Since your problem just takes place in the s3, we should not prevent nvs from being saved both in the s2ram and hibernation. no_nvs_s3 is enough. So please test the new patch again. Thanks.
Comment 5 Sébastien Wilmet 2012-11-26 01:25:30 UTC
The new patch works fine too.
Comment 6 Lan Tianyu 2012-11-26 03:17:51 UTC
Ok. Thanks
Comment 7 Florian Mickler 2012-12-22 09:18:38 UTC
A patch referencing this bug report has been merged in Linux v3.8-rc1:

commit 876ab79055019e248508cfd0dee7caa3c0c831ed
Author: Lan Tianyu <tianyu.lan@intel.com>
Date:   Wed Nov 21 23:12:12 2012 +0100

    ACPI / PM: Add Sony Vaio VPCEB1S1E to nonvs blacklist.
Comment 8 Lan Tianyu 2013-01-25 16:47:09 UTC
Hi:
     sorry to bother you again. Could you test your both sony machine's s2ram and s2disk with acpi_sleep=nonvs_s3 kernle param? Thanks.
Comment 9 Sébastien Wilmet 2013-01-25 18:27:26 UTC
Sure. Both s2ram and s2disk work fine with acpi_sleep=nonvs_s3.
Comment 10 Sébastien Wilmet 2013-01-28 12:44:49 UTC
I see that you have sent a patch for two models of the Sony Vaio, but I have access only to the VPCEB1S1E.

Also, to be sure it is OK, I've tested acpi_sleep=nonvs_s3 with the 3.7.2 or 3.7.3 kernel version.
Comment 11 Lan Tianyu 2013-01-30 07:09:26 UTC
OK. Sorry. I misunderstand. I further consider this test is not safety since these machine already in the blacklist, nonvs always will be set to true regardless param "acpi_sleep=nonvs_s3". So can you test my the new patch? And then I add the "tested-by you" in the patch.
Comment 12 Lan Tianyu 2013-01-30 07:12:34 UTC
Created attachment 92201 [details]
debug.patch

new patch
Comment 13 Lan Tianyu 2013-01-30 07:14:36 UTC
Created attachment 92211 [details]
debug.patch

Test this one. Thanks.
Comment 14 Lan Tianyu 2013-02-19 05:22:46 UTC
Hi Len:
        This bug has already been fixed. The new patch is just to do some optimization since nonvs may not be necessary in s4. I think the bug should be closed.

Hi Sébastien:
        Could you test the new patch?

Note You need to log in before you can comment on or make changes to this bug.